<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="header_text">ITEM</string>
    <!-- TODO: Add necessary string values -->
    <string name="fragment_launch_image_description">Logo of the app</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">find my representatives</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="election_information_title">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="follow_election_button">Follow Election</string>
    <string name="unfollow_election_button">Unfollow Election</string>
    <string name="permission_denied_explanation">Grant location permission in order to get your location.</string>
    <string name="settings">Settings</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="representative_search">Representative Search</string>
    <string name="use_my_location">Use my Location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
</resources>
